# lazyhex

./: Cargo.toml  README.md  config.lua  demo.tape  sqlite.lua
src/: app.rs  command.rs  comparator.rs  config.rs  main.rs  ui.rs  viewer.rs
src/ui/: difference.rs  hex.rs  index.rs  info.rs  table.rs
