[package]
name = "lazyhex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4.2", features = ["derive"] }
crossterm = "0.28.1"
mlua = { version = "0.9.9", features = [ "lua54" ] }
num-traits = "0.2.19"
ratatui = { version = "0.28.1", features = ["all-widgets"]}
